force-app/main/default/objects/FEC_Custom_Sync__c/FEC_Custom_Sync__c.object-meta.xml
<CustomObject>
    <description>Send Data to Bix</description>
    <label>FEC Custom Sync</label>
    <nameField>
        <label>FEC Custom Sync</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC Custom Sync</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>