force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_Additional_Conditions__c.field-meta.xml
<CustomField>
    <fullName>FEC_Additional_Conditions__c</fullName>
    <label>Additional Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>