force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_Case_Business_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Business_Code__c</fullName>
    <inlineHelpText>This field only applies when the Target Object is Case.</inlineHelpText>
    <label>Case Business Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>