force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_Created_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>FEC_Created_Date_Field__c</fullName>
    <defaultValue>&quot;CreatedDate&quot;</defaultValue>
    <description>Field path for created date filter in sync query. E.g. CreatedDate or A__r.CreatedDate. Defaults to CreatedDate if blank.</description>
    <label>Created Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>