force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_End_At__c.field-meta.xml
<CustomField>
    <fullName>FEC_End_At__c</fullName>
    <label>End At</label>
    <type>DateTime</type>
</CustomField>