force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_Map_Select_Field__c.field-meta.xml
<CustomField>
    <fullName>FEC_Map_Select_Field__c</fullName>
    <label>Map Select Field</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>