force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_Mapping_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Mapping_Data_Type__c</fullName>
    <label>Mapping Data Type</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>