force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_Modified_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>FEC_Modified_Date_Field__c</fullName>
    <defaultValue>&quot;LastModifiedDate&quot;</defaultValue>
    <description>Field path for modified date filter in sync query. E.g. LastModifiedDate or A__r.LastModifiedDate. Defaults to LastModifiedDate if blank.</description>
    <label>Modified Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>