force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_Processing_Quantity__c.field-meta.xml
<CustomField>
    <fullName>FEC_Processing_Quantity__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Processing quantity run on batch</description>
    <label>Processing Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>