force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_Request_Body_Mapping__c.field-meta.xml
<CustomField>
    <fullName>FEC_Request_Body_Mapping__c</fullName>
    <label>Request Body Mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>