force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_Start_At__c.field-meta.xml
<CustomField>
    <fullName>FEC_Start_At__c</fullName>
    <label>Start At</label>
    <type>DateTime</type>
</CustomField>