force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_Static_Map_Value__c.field-meta.xml
<CustomField>
    <fullName>FEC_Static_Map_Value__c</fullName>
    <label>Static Map Value</label>
    <length>13000</length>
    <type>LongTextArea</type>
</CustomField>