force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_Sync_Failed__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sync_Failed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Số lượng sync Fail</description>
    <label>Sync Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>