force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_Sync_Successfully__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sync_Successfully__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Số lương sync thành công ở kỳ trước</description>
    <label>Sync SuccessFully</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>