force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_Sync_To__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sync_To__c</fullName>
    <label>Sync To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>