force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_Table_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Table_Name__c</fullName>
    <label>Table Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>