force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_Target_Object__c.field-meta.xml
<CustomField>
    <fullName>FEC_Target_Object__c</fullName>
    <label>TargetObject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>