force-app/main/default/objects/FEC_Custom_Sync__c/fields/FEC_Total_Record_Sync__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Record_Sync__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Record Sync</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>